TestCases/ASTTests/SemanticErrorsTests/tests/test30.c
int main(){
    {
        int x = 1;
    }
    {
        int x = 2;
    }
}